# bearcat

./: .gitignore  README.md  pi-zero-mount.scad  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
examples/: find_codes.py  listen.py  monitor.py  populate-racing.py  populate.py  read.py  scan.py  transcribe.py
examples/bc125at/: configure.py  find_codes.py  listen.py  monitor.py  populate.py  read.py  scan.py  transcribe.py
examples/bc75xlt/: configure.py
src/bearcat/: __init__.py  bc125at.py  classes.py  exceptions.py  tools.py  values.py
src/bearcat/handheld/: __init__.py  bc125at.py  bc75xlt.py
src/bearcat/mobile/: __init__.py
src/bearcat/scanners/: __init__.py  bc125at.py  bc75xlt.py  common.py  handheld.py
test/integration/: test_bc125at.py  test_bc75xlt.py
