[project]
name = "bearcat"
version = "1.3.1"
dependencies = [
    "pyserial"
]
authors = [
    { name = "Liam Fruzyna", email = "liam@fruzyna.net" }
]
description = "Python library for communicating with Uniden Bearcat scanners."
license = { text = "MPL-2.0" }
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Topic :: Communications :: Ham Radio",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/fruzyna/bearcat"
Issues = "https://github.com/fruzyna/bearcat/issues"
Repository = "https://github.com/fruzyna/bearcat.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"